# render-engine-youtube-link-embed

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  tests.yml
docs/: docs.py
src/render_engine_youtube_embed/: __init__.py  plugins.py  youtube_embed.py
tests/: conftest.py  test_link_detect.py
tests/.github/: dependabot.yml
