[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_youtube_embed"
description = "A Render Engine Plugin for replacing Youtube Links with Embed Links"
readme = "README.md"
dynamic = ["version"]

dependencies = ["render-engine>=2023.3.1b1"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
# version_scheme = "python-simplified-semver"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://github.com/kjaymiller/render-engine-youtube-link-embed"
repository = "https://github.com/kjaymiller/render-engine-youtube-link-embed"

[tool.pytest.ini_options]
pythonpath = ["src"]